Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
0.10.0
-
None
-
VS2010, Windows
Description
While verifying a defect I had to build the windows thrift C++ library and found a number of compiler warnings that needed to be cleaned up. As part of cleaning these up, I found that additional compilers were also posting warnings.
Acceptance Criteria:
- I can build successfully with Visual Studio 2010 targeting x86 debug mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2010 targeting x86 release mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2010 targeting x64 debug mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2010 targeting x64 release mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2015 targeting x86 debug mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2015 targeting x86 release mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2015 targeting x64 debug mode with /WX (warnings are errors).
- I can build successfully with Visual Studio 2015 targeting x64 release mode with /WX (warnings are errors).
Follow-up: I got pretty close to this ideal goal, but not quite there. There were improvements nonetheless and I was able to successfully build with Visual Studio 2010, 2012, 2013, and 2015, Debug or Release, Win32 or x64 modes and pass unit tests. As such I didn't meet all the criteria of removing every warning, but the majority are gone.
Attachments
Issue Links
- is blocked by
-
THRIFT-3932 C++ ThreadManager has a rare termination race
- Closed
- is related to
-
THRIFT-3978 Thrift C++ runtime uses assert to prevent overflows, checks sanity only in debug builds
- Open
- relates to
-
THRIFT-3847 thrift/config.h includes a #define for VERSION which will likely conflict with existing user environment or code
- Closed
-
THRIFT-3982 Thrift compiler code throws std::string to indicate an error, which is not safe
- Open
- links to