THRIFT-3873: fix compiler warnings on windows with VS2010 and fix concurrency tests only running in debug mode; change VERSION to THRIFT_VERSION to avoid conflicts with third party or OS headers